# my-mini-claude

./: .gitignore  pyproject.toml
mini_claude_my/: __main__.py  agent.py  prompt.py  tools.py  ui.py
mini_claude_my/test/: agent_test.py
my_mini_claude/: __main__.py  agent.py  ui.py
文件样例/: settings.local.json  各种结果返回示例.py
